# HPC-HD-TextReuse-ETL

./: .env-template  .gitignore  README.md  _columnstore bulk load.sql  _schema.sql  actors_and_authors.py  bipartite.py  cluster_across_texts.py  cluster_analysis.py  columnstore bulk loads.sql  connected_components.py  coverage.py  db_utils.py  defragment.ipynb  defragment.py  downstream.py  indexes.sql  load_mariadb.py  localzip2parquet.py  lpa.ipynb  mariadb_query_analysis.py  mariadb_quote_query_analysis.py  materialization_log.md  non_source_pieces.py  plot_utils.py  pyproject.toml  reception_coverages.py  reception_inception.py  schema columnstore.sql  schema.sql  scratch.py  spark_functionality.sc  spark_query_analysis.py  spark_quote_query_analysis.py  spark_utils.py  spark_utils_alternate.py  textreuse_sources_zip2parquet.py  unique_ids.py  zip2parquet.py
cluster_pieces/: cluster.sh  go.mod  main.go
etl_textreuse/: README.md  __init__.py  database_utils.py  scratch.py  spark_utils.py
etl_textreuse/additional_assets/: book_based.py
etl_textreuse/assets/: README.md  actors_and_authors.py  chinese_label_propagation.py  coverages.py  defragmentation.py  downstream_clsuters.py  downstream_clusters.py  ids_and_mappings.py  orig_textreuses.py  piece_id_mappings.ipynb  publication_date.py  raw_textreuses.py  raw_texts.py  reception.py  source_piece_statistics.py  spark_functionality.sc  titles.py  upstream_metadata.py
etl_textreuse/database_assets/: README.md  coverages.py  downstream_clusters.py  downstream_metadata.py  ids_and_mappings.py  reception.py
notebooks/: Gather reception inception.py  plotting.py  reception_query_analysis.py  thesis-plots.py
