[tool.poetry]
name = "etl-textreuse"
version = "0.1.0"
description = ""
authors = ["Ananth Mahadevan <ananth.mahadevan@helsinki.fi>"]
readme = "README.md"
packages = [{include = "etl_textreuse"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.124"
smart-open = {git = "https://github.com/HPC-HD/smart_open.git", rev = "s3_ignore_seeks_to_current_position"}
findspark = "^2.0.1"
pyspark = "^3.4.1"
toml = "^0.10.2"
jupyter = "^1.0.0"
ijson = "^3.2.0.post0"
autopep8 = "^2.0.2"
tqdm = "^4.65.0"
seaborn = "^0.12.2"
powerlaw = "^1.5"
pandas = {extras = ["compression", "computation", "excel", "feather", "mysql", "output-formatting", "parquet", "performance", "plot"], version = "^2.0.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
