[tool.poetry]
name = "etl-textreuse"
version = "0.1.0"
description = ""
authors = ["Ananth Mahadevan <ananth.mahadevan@helsinki.fi>"]
readme = "README.md"
packages = [{include = "etl_textreuse"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.124"
smart-open = {git = "https://github.com/HPC-HD/smart_open.git", rev = "s3_ignore_seeks_to_current_position"}
findspark = "^2.0.1"
pyspark = "^3.4.1"
toml = "^0.10.2"
jupyter = "^1.0.0"
ijson = "^3.2.0.post0"
autopep8 = "^2.0.2"
tqdm = "^4.65.0"
seaborn = "^0.13.0"
powerlaw = "^1.5"
pandas = {extras = ["compression", "computation", "excel", "feather", "mysql", "output-formatting", "parquet", "performance", "plot"], version = "^2.0.3"}
dagster = "^1.4.11"
dagster-webserver = "^1.4.11"
grpcio= [
    {url = "https://github.com/dagster-io/build-grpcio/raw/main/wheels/grpcio-1.47.5-cp310-cp310-macosx_11_0_arm64.whl", markers="sys_platform == 'darwin'"},
    {version=">=1.44.0",markers="sys_platform == 'linux'"}]
scikit-learn = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "etl_textreuse"